# libwebqc

./: CMakeLists.txt  MERGE-CHECKLIST.md  README.md  libwebqc.c  libwebqc.h  web_access.c  webqc-errors.c  webqc-options.c
docs/: Doxyfile.in
docs/doc_doxygen/html/: MERGE-CHECKLIST_8md.html  README_8md.html  annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  libwebqc_8h.html  libwebqc_8h__dep__incl.map  libwebqc_8h__dep__incl.md5  libwebqc_8h__incl.map  libwebqc_8h__incl.md5  libwebqc_8h_source.html  md__home_ury_CLionProjects_libwebqc_MERGE-CHECKLIST.html  md__home_ury_CLionProjects_libwebqc_README.html  menudata.js  pages.html  structhandler__curl__info-members.html  structhandler__curl__info.html  structhandler__curl__info__coll__graph.map  structhandler__curl__info__coll__graph.md5  structname__value__pair-members.html  structname__value__pair.html  structtwo__electron__integrals__job__parameters-members.html  structtwo__electron__integrals__job__parameters.html  structweb__reply__buffer-members.html  structweb__reply__buffer.html  structwebqc__handler__t-members.html  structwebqc__handler__t.html  structwebqc__handler__t__coll__graph.map  structwebqc__handler__t__coll__graph.md5  structwqc__return__value-members.html  structwqc__return__value.html  (+22 more)
docs/doc_doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  (+27 more)
examples/: water-sto3g-integrals.c
include/: webqc-curl.h  webqc-errors.h  webqc-handler.h  webqc-json.h  webqc-options.h  webqc-web-access.h
src/: info-reply-parser.c  libwebqc.c  reply_parsers.c  web_access.c  webqc-eri.c  webqc-errors.c  webqc-options.c
test/: CMakeLists.txt  test-eri.cpp  test-options.cpp  token-option.cpp
